[gd_scene load_steps=8 format=3 uid="uid://dojfn07gt2s6o"]

[ext_resource type="Script" path="res://scripts/obstacles/mushroom.gd" id="1_i3eyu"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_omqy3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_be2xb"]
albedo_color = Color(0.814524, 0.998956, 0.792885, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qx1ah"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="Animation" id="Animation_mcu5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_24hgy"]
resource_name = "rotation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2kwq0"]
_data = {
"RESET": SubResource("Animation_mcu5r"),
"rotation": SubResource("Animation_24hgy")
}

[node name="Mushroom" type="RigidBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_i3eyu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.395979, 0, 0, 0, 0.7, 0, 0, 0)
mesh = SubResource("CapsuleMesh_omqy3")
surface_material_override/0 = SubResource("StandardMaterial3D_be2xb")

[node name="AnimationTimer" type="Timer" parent="."]

[node name="MeshInstance3D2" type="CSGSphere3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.134, 0, 0, 0, 1.3, 0, 0.181191, 0)
material = SubResource("StandardMaterial3D_qx1ah")

[node name="CSGBox3D" type="CSGBox3D" parent="MeshInstance3D2"]
transform = Transform3D(1, 0, 0, 0, 0.771164, 0, 0, 0, 1, 0, -0.33122, 0)
operation = 2
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2kwq0")
}
autoplay = "rotation"

[node name="CameraTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="CameraTimer" to="." method="_on_camera_timer_timeout"]
